--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">TestAppWeatherForecast</string>
+    <string name="title_today">Today</string>
+    <string name="title_forecast">Forecast</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
